# VisionTag

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  smoke-test.ps1
tests/: test_admin_service.py  test_api.py  test_api_backend.py  test_config.py  test_detection_service.py  test_detector.py  test_labels.py  test_remote_fetch.py  test_security.py  test_service.py  test_utils.py
visiontag/: __init__.py  api.py  cli.py  config.py  detector.py  errors.py  labels_pt.py  logging_config.py  remote_fetch.py  schemas.py  security.py  telemetry.py  utils.py
visiontag/core/: __init__.py  exceptions.py  models.py  protocols.py  settings.py
visiontag/infrastructure/: __init__.py  image_io.py  yolo_detector.py
visiontag/interfaces/: __init__.py
visiontag/interfaces/api/: app.py  schemas.py
visiontag/interfaces/cli/: app.py
visiontag/interfaces/web/static/: app.js  index.html  styles.css
visiontag/services/: __init__.py  admin_service.py  detection_service.py  tagging.py
visiontag/static/: app.js  index.html  styles.css
visiontag/static/js/: api.js  app.js  constants.js  experience.js  helpers.js  storage.js  ui.js
