[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "visiontag"
version = "1.0.0"
description = "Sistema de visão computacional em tempo real para detecção de objetos com tags em português"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Matheus Siqueira", email = "matheussiqueirahub@gmail.com" }]
keywords = ["computer-vision", "yolov8", "object-detection", "portuguese"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "python-multipart>=0.0.6",
    "ultralytics>=8.1.17",
    "opencv-python>=4.9.0.80",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=5.0",
]

[project.scripts]
visiontag = "visiontag.cli:main"

[project.urls]
Homepage = "https://www.matheussiqueira.dev/"
Repository = "https://github.com/matheussiqueira-dev/VisionTag"

[tool.setuptools.packages.find]
where = ["."]
include = ["visiontag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["visiontag"]
omit = ["tests/*"]
